...
@MainActor
class AuthViewModel: ObservableObject {
    @Published var userSession: UserProtocol?
    @Published var currentUser: User?
    
    init() {
        if ProcessInfo.processInfo.environment["UITestNewUser"] == "true" { // for UI testing
            signOut()
        } else if ProcessInfo.processInfo.environment["UITestMockUser"] == "true" {
            self.currentUser = User.MOCK_USER
            self.userSession = MockUser()
        } else {
            self.userSession = Auth.auth().currentUser
...
